# vst-loop-engine

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_PLAN.md
cmake/: CPM.cmake
docs/: MIX-BUS-EFFECTS-PLAN.md  THEMING-SYSTEM-PLAN.md
src/: CLAUDE.md  DegradeProcessor.h  DelayLine.h  LoopBuffer.h  LoopEngine.h  MicroLooper.h  PhaseVocoder.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReverbProcessor.h  SaturationProcessor.h  SubBassProcessor.h  TestSoundLoader.h  TestToneGenerator.h
ui/: index.html  main.js  package.json  styles.css
